--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <div class="pageContainer">
       <div class="headline">
         <img src="logo.svg" alt="Logo" width="200px" />
-        <span> System Status </span>
+        <span> آپتایم سرور ها </span>
       </div>
       <div id="reports" class="reportContainer"></div>
       <div id="tooltip" class="tooltip" style="opacity: 0">
@@ -37,16 +37,12 @@
           </div>
           <div class="statusSubtitle">
             <div class="sectionUrl"><a href="$url">$url</a></div>
-            <div class="statusUptime">$upTime in the last 30 days</div>
+            <div class="statusUptime">$آپتایم سایت در ۳۰ روز اخیر</div>
           </div>
         </div>
       </div>
     </div>
     <footer>
-      Forked from
-      <a href="https://github.com/statsig-io/statuspage/"
-        >Statsig's Open-Source Status Page</a
-      >.
     </footer>
   </body>
   <script>
