--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
           </div>
           <div class="statusSubtitle">
             <div class="sectionUrl"><a href="$url">$url</a></div>
-            <div class="statusUptime">$آپتایم سایت در ۳۰ روز اخیر</div>
+            <div class="statusUptime">.آپتایم سایت در ۳۰ روز اخیر</div>
           </div>
         </div>
       </div>
